# hse-multithreading-examples

./: .gitignore  CMakeLists.txt
processes_and_threads/pthread/: pthread_intro.cpp
synchronization_primitives/: CMakeLists.txt
synchronization_primitives/atomics/: CMakeLists.txt  atomic_operations.cpp  cas.cpp  data_race.cpp  race_condition.cpp
synchronization_primitives/barrier/: CMakeLists.txt  barrier.cpp  latch.cpp
synchronization_primitives/condition_variable/: CMakeLists.txt  condition_variable_any.cpp  condvar_intro.cpp
synchronization_primitives/mutex/: CMakeLists.txt  deadlock.cpp  livelock.cpp  lock_guard.cpp  mutex.cpp  recursive_mutex.cpp  shared_mutex.cpp  spinlock.cpp
synchronization_primitives/sync_intro/: CMakeLists.txt  data_race.cpp
tasks/apply_function/: CMakeLists.txt  apply_function.h  apply_function_bench.cpp
tasks/synchronization_primitives/: task.md
tasks/synchronization_primitives/buffered_channel/: buffered_channel.h
tasks/synchronization_primitives/unbuffered_channel/: unbuffered_channel.h
ДЗ_1/: apply_function_tests.cpp
